This this the changelog file for the Pothos C++ library.

Release 0.5.0 (pending)
==========================

- Switch stdio to end of line flushing for logging
- Added Plugin path API for concatenating two paths
- Added API for parsing sources for block descriptions
- Created configuration-file based loader for plugins:
    - With built-in loader for JSON topologies
    - With built-in loader for JIT compilation
    - With built-in loader for block descriptions
- Added PluginModule boolean operator for checking null
- Reimplemented compiler support around file paths
- Reimplemented QFormat for simplification and warnings

Release 0.4.2 (pending)
==========================

- Added missing BufferChunk calls to managed registry
- RemoteServer should wait() on process after terminate
- Added missing Block::isActive to managed registry
- Fixed typo in PothosConfig.cmake for include check
- PothosUtil option argument for --proxy-server

Release 0.4.1 (2016-09-26)
==========================

- Update internal poco submodule to track poco-1.7.5
- Dynamic environment variables for snappy packages
- Fixed output port reserve handling for empty managers
- Fix warnings for doxygen generated documentation
- Set _DEBUG define when not building under MSVC Debug
- Bump activity indicator for slots and de/activate

Release 0.4.0 (2016-08-02)
==========================

Deprecated Framework API calls:

- Deprecated OutputPort::popBytes, use popElements

New Framework API calls:

- Added OutputPort::setReserve function call
- Added OutputPort::popElements function call
- Added OutputPort::getBuffer function call
- Added InputPort::peekMessage function call
- Added BlockRegistry::make block proxy factory
- Added Block::emitSignal to replace callVoid
- Added DType::fromDType factory method
- Added BufferChunk::convert into a specified buffer

General additions and changes:

- Added set, get, and function call operator to Proxy
- Support global variables in JSON Topology description