@@ -2,12 +2,15 @@
 // SPDX-License-Identifier: BSL-1.0
 
 #include <Pothos/Archive/StreamArchiver.hpp>
+#include <Pothos/Archive/Numbers.hpp>
 #include <iostream>
 
-Pothos::Archive::OStreamArchiver::OStreamArchiver(std::ostream &os, const unsigned int ver):
-    os(os), ver(ver)
+#define POTHOS_ARCHIVE_VERSION 1
+
+Pothos::Archive::OStreamArchiver::OStreamArchiver(std::ostream &os):
+    os(os), ver(POTHOS_ARCHIVE_VERSION)
 {
-    return;
+    *this << ver;
 }
 
 void Pothos::Archive::OStreamArchiver::writeBytes(const void *buff, const size_t len)
@@ -15,10 +18,10 @@ void Pothos::Archive::OStreamArchiver::writeBytes(const void *buff, const size_t
     os.write(reinterpret_cast<const char *>(buff), len);
 }
 
-Pothos::Archive::IStreamArchiver::IStreamArchiver(std::istream &is, const unsigned int ver):
-    is(is), ver(ver)
+Pothos::Archive::IStreamArchiver::IStreamArchiver(std::istream &is):
+    is(is), ver(0)
 {
-    return;
+    *this >> ver;
 }
 
 void Pothos::Archive::IStreamArchiver::readBytes(void *buff, const size_t len)
