@@ -3,6 +3,9 @@ This this the changelog file for the Pothos C++ library.
 Release 0.5.0 (pending)
 ==========================
 
+- Removed the pothos-serialization dependency and
+  replaced it with a much smaller in-library solution.
+  The serialization format has changed for this release.
 - Switch stdio to end of line flushing for logging
 - Added Plugin path API for concatenating two paths
 - Added API for parsing sources for block descriptions
